data/derived/comb/progs/unify/prog6571.ml.out
Characters 112-131:
  |x when x>=10->(multHelper i t)::((x/10),(x mod 10))@(multiHelper i t)@[]
                                   ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list list
